# grpc-greeter

./: .gitignore  README.md  cert_gen.sh  pyproject.toml  test_server.sh
grpc_greeter/: client.py  server.py
tests/: test_server.py
